# trader

./: .gitignore  API_GUIDE.md  BOT_MANAGEMENT_GUIDE.md  DATABASE_GUIDE.md  FASTAPI_SUMMARY.md  FRONTEND_COMPLETE.md  HOW_IT_WORKS.md  MULTI_BOT_SYSTEM_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UNDERSTAND_PROJECT.md  api_server.py  example_with_database.py  main.py  my_first_bot.py  package-lock.json  pyproject.toml  simple_example.py  test_api.py  test_setup.py  view_database.py
config/: config.yaml
examples/: backtest_example.py  live_trading_example.py
frontend/: MUI_SETUP.md  SETUP.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/pages/: BotControl.tsx  Dashboard.tsx  History.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
src/trader/: __init__.py
src/trader/api/: __init__.py  main.py  models.py
src/trader/api/routers/: bot.py  bots.py  health.py  portfolio.py  strategies.py  trades.py
src/trader/backtesting/: __init__.py  backtest_engine.py
src/trader/bots/: __init__.py  crypto_bot.py  stock_bot.py
src/trader/core/: __init__.py  base_bot.py  bot_manager.py  portfolio.py  portfolio_with_db.py  strategy.py
src/trader/database/: __init__.py  db_manager.py  models.py
src/trader/indicators/: __init__.py  technical_indicators.py
src/trader/risk/: __init__.py  risk_manager.py
src/trader/strategies/: __init__.py  bollinger_bands.py  macd_strategy.py  moving_average.py  rsi_strategy.py
src/trader/utils/: __init__.py  data_fetcher.py  logger.py
